Add a ciField for null markers, beautify flattened field name